--- a/project.css
+++ b/project.css
@@ -17,3 +17,14 @@
     margin: auto;
     text-align: center;
 }
+.card{
+    border: 1px solid black;
+    padding: 10px;
+}
+.card-img{
+    width: 150px;
+}
+.cart-info{
+    display: flex;
+    justify-content: space-around;
+}
